# vue-scan

./: AGENT.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: config.rs  context.rs  lib.rs  main.rs  scanner.rs  suppression.rs
src/parser/: mod.rs
src/parser/template/: ast.rs  mod.rs  parser.rs  tests.rs
src/report/: mod.rs  sarif.rs
src/rules/: mod.rs  no_dangerous_url.rs  no_document_write.rs  no_dynamic_bind.rs  no_eval.rs  no_fetch_without_timeout.rs  no_inline_styles.rs  no_inner_html.rs  no_open_redirect.rs  no_postmessage_wildcard.rs  no_unsafe_iframe.rs  no_unsafe_localstorage.rs  no_v_html.rs  no_watch_with_callback.rs  no_window_open_blank_noopener.rs  v_for_missing_key.rs
src/visitor/: mod.rs
tests/: integration.rs
tests/fixtures/: clean.vue  clean_full.vue  partial.vue  vulnerable.vue  vulnerable_full.vue  with_ignores.vue
tests/integration/: audit.rs  common.rs  main.rs  snapshots.rs
tests/integration/snapshots/: integration__snapshots__json_clean.snap  integration__snapshots__json_via_binary.snap  integration__snapshots__json_vulnerable.snap  integration__snapshots__json_with_ignores.snap  integration__snapshots__minimal_via_binary.snap  integration__snapshots__pretty_clean.snap  integration__snapshots__pretty_vulnerable_full.snap  integration__snapshots__pretty_with_ignores.snap  integration__snapshots__sarif_via_binary.snap  integration__snapshots__sarif_vulnerable.snap  integration__snapshots__sarif_with_ignores.snap
