[package]
name = "vue_scanner"
version = "0.1.0"
edition = "2024"
description = "A high-performance Vue.js SFC scanner with clear, actionable diagnostics"
license = "MIT"

[[bin]]
name = "vue-scanner"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
miette = { version = "7", features = ["fancy"] }
thiserror = "1"
ignore = "0.4"
oxc_parser = "0.20"
oxc_allocator = "0.20"
oxc_ast = "0.20"
oxc_span = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
atty = "0.2"

[dev-dependencies]
tempfile = "3"
rstest = "0.18"
